heat module matches astro
